[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/visual/ui/main_menu/menu_btn_pressed.png" type="Texture" id=1]
[ext_resource path="res://resources/DefaultFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/visual/ui/main_menu/menu_btn_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/visual/ui/main_menu/menu_btn_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/visual/ui/main_menu/menu_btn_focused.png" type="Texture" id=5]
[ext_resource path="res://assets/visual/ui/main_menu/menu_btn_disabled.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/kenney_fontpackage/fonts/kenney_pixel.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scripts/GameOverScene.gd" type="Script" id=8]
[ext_resource path="res://assets/visual/game_assets/spr_ui_termination_bg.png" type="Texture" id=9]
[ext_resource path="res://scripts/GameOverMainMenuButton.gd" type="Script" id=10]
[ext_resource path="res://scripts/GameOverRestartGameButton.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 7 )

[node name="GameOverScene" type="Node2D"]
script = ExtResource( 8 )

[node name="GameOverBackgroundSprite" type="Sprite" parent="."]
texture = ExtResource( 9 )
centered = false

[node name="Buttons" type="Node2D" parent="."]
position = Vector2( 64, 112 )

[node name="RestartGameButton" type="TextureButton" parent="Buttons"]
margin_right = 64.0
margin_bottom = 16.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 5 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLabel" type="Label" parent="Buttons/RestartGameButton"]
margin_right = 64.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="TextureButton" parent="Buttons"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 16.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 5 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuLabel" type="Label" parent="Buttons/MainMenuButton"]
margin_right = 64.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Main Menu"
align = 1
valign = 1

[node name="TextLabels" type="Node2D" parent="."]

[node name="NoticeOfTerminationLabel" type="Label" parent="TextLabels"]
margin_right = 256.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "Notice of termination"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondsLabel" type="Label" parent="TextLabels"]
margin_left = 4.0
margin_top = 32.0
margin_right = 252.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
text = "It took you only x seconds to get fired."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GiftsWrappedLabel" type="Label" parent="TextLabels"]
margin_left = 4.0
margin_top = 50.0
margin_right = 252.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "You wrapped x gifts worth of 1000 $."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GiftsDestroyedLabel" type="Label" parent="TextLabels"]
margin_left = 4.0
margin_top = 69.0
margin_right = 252.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 2 )
text = "You destroyed gifts woth 1000 $."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainLabel" type="Label" parent="TextLabels"]
margin_left = 4.0
margin_top = 88.0
margin_right = 252.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 2 )
text = "Brave enough to try again?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/RestartGameButton" to="Buttons/RestartGameButton" method="_on_RestartGameButton_pressed"]
[connection signal="pressed" from="Buttons/MainMenuButton" to="Buttons/MainMenuButton" method="_on_MainMenuButton_pressed"]
